--- a/nd4j-perf/pom.xml
+++ b/nd4j-perf/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>nd4j-api</artifactId>
-            <version>${version}</version>
+            <version>${project.version}</version>
         </dependency>
     </dependencies>
 </project>
