--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,7 @@
         <javacpp.platform.properties>${javacpp.platform}</javacpp.platform.properties>
         <spark.version>1.5.2</spark.version>
         <maven-shade-plugin.version>2.4.3</maven-shade-plugin.version>
+        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
     </properties>
 
     <developers>
@@ -329,6 +330,7 @@
             </plugin>
             <plugin>
                 <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven-deploy-plugin.version}</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
