--- a/nd4j-instrumentation/pom.xml
+++ b/nd4j-instrumentation/pom.xml
@@ -49,35 +49,26 @@
             <version>${project.version}</version>
         </dependency>
 
-
-        <!-- REMOVED IN FAVOUR OF ND4J SHADED VERSION -->
-        <!--<dependency>-->
-            <!--<groupId>io.dropwizard</groupId>-->
-            <!--<artifactId>dropwizard-core</artifactId>-->
-            <!--<version>${dropwizard.version}</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.slf4j</groupId>-->
-                    <!--<artifactId>log4j-over-slf4j</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.slf4j</groupId>-->
-                    <!--<artifactId>slf4j-log4j12</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>log4j</groupId>-->
-                    <!--<artifactId>log4j</artifactId>-->
-                <!--</exclusion>-->
-
-            <!--</exclusions>-->
-        <!--</dependency>-->
         <dependency>
-            <groupId>org.nd4j</groupId>
-            <artifactId>dropwizard</artifactId>
-            <version>${project.version}</version>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-core</artifactId>
+            <version>${dropwizard.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>log4j-over-slf4j</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-log4j12</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>log4j</groupId>
+                    <artifactId>log4j</artifactId>
+                </exclusion>
+
+            </exclusions>
         </dependency>
-
-
 
         <dependency>
             <groupId>junit</groupId>
