Final cleanup in preparation for merging

--- a/nd4j-backends/nd4j-api-parent/nd4j-api/pom.xml
+++ b/nd4j-backends/nd4j-api-parent/nd4j-api/pom.xml
@@ -103,18 +103,7 @@
             <artifactId>slf4j-api</artifactId>
         </dependency>
 
-
-        <!-- REMOVED IN FAVOUR OF SHADED VERSION -->
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-core</artifactId>-->
-            <!--<version>${jackson.version}</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>com.fasterxml.jackson.core</groupId>-->
-            <!--<artifactId>jackson-databind</artifactId>-->
-            <!--<version>${jackson.version}</version>-->
-        <!--</dependency>-->
+        <!-- Shaded version of Jackson -->
         <dependency>
             <groupId>org.nd4j</groupId>
             <artifactId>jackson</artifactId>
