--- a/deeplearning4j-scaleout/spark/dl4j-spark/pom.xml
+++ b/deeplearning4j-scaleout/spark/dl4j-spark/pom.xml
@@ -67,15 +67,11 @@
 
     <dependencies>
 
+        <!-- ND4J Shaded Jackson Dependency -->
         <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-core</artifactId>
-            <version>2.4.4</version>    <!-- Force 2.4.4 for Spark local tests (to match Spark) -->
-        </dependency>
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>2.4.4</version> <!-- Force 2.4.4 for Spark local tests (to match Spark) -->
+            <groupId>org.nd4j</groupId>
+            <artifactId>jackson</artifactId>
+            <version>${nd4j.version}</version>
         </dependency>
 
         <dependency>
