--- a/deeplearning4j-nlp-parent/deeplearning4j-nlp/pom.xml
+++ b/deeplearning4j-nlp-parent/deeplearning4j-nlp/pom.xml
@@ -70,23 +70,25 @@
 		<!-- TSNE -->
 
 
+		<!--<dependency>-->
+			<!--<groupId>io.dropwizard</groupId>-->
+			<!--<artifactId>dropwizard-assets</artifactId>-->
+			<!--<version>${dropwizard.version}</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>io.dropwizard</groupId>-->
+			<!--<artifactId>dropwizard-views-mustache</artifactId>-->
+			<!--<version>${dropwizard.version}</version>-->
+		<!--</dependency>-->
+		<!--<dependency>-->
+			<!--<groupId>io.dropwizard</groupId>-->
+			<!--<artifactId>dropwizard-views-freemarker</artifactId>-->
+			<!--<version>${dropwizard.version}</version>-->
+		<!--</dependency>-->
 		<dependency>
-			<groupId>io.dropwizard</groupId>
-			<artifactId>dropwizard-assets</artifactId>
-			<version>${dropwizard.version}</version>
-		</dependency>
-
-
-		<dependency>
-			<groupId>io.dropwizard</groupId>
-			<artifactId>dropwizard-views-mustache</artifactId>
-			<version>${dropwizard.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>io.dropwizard</groupId>
-			<artifactId>dropwizard-views-freemarker</artifactId>
-			<version>${dropwizard.version}</version>
+			<groupId>org.nd4j</groupId>
+			<artifactId>dropwizard</artifactId>
+			<version>${nd4j.version}</version>
 		</dependency>
 
 
