--- a/nd4j-backends/nd4j-backend-impls/nd4j-cuda/src/main/resources/nd4j-jcublas.properties
+++ b/nd4j-backends/nd4j-backend-impls/nd4j-cuda/src/main/resources/nd4j-jcublas.properties
@@ -25,6 +25,7 @@ complex.float.class = org.nd4j.linalg.jcublas.complex.ComplexFloat
 blas.ops= org.nd4j.linalg.jcublas.JCublasWrapper
 ndarrayfactory.class = org.nd4j.linalg.jcublas.JCublasNDArrayFactory
 affinitymanager = org.nd4j.jita.concurrency.CudaAffinityManager
+memorymanager = org.nd4j.jita.memory.CudaMemoryManager
 ndarray.order = c
 databufferfactory = org.nd4j.linalg.jcublas.buffer.factory.CudaDataBufferFactory
 shapeinfoprovider = org.nd4j.linalg.jcublas.CachedShapeInfoProvider
