--- a/nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/resources/nd4j-native.properties
+++ b/nd4j-backends/nd4j-backend-impls/nd4j-native/src/main/resources/nd4j-native.properties
@@ -22,6 +22,7 @@ complex.class.double = org.nd4j.linalg.cpu.nativecpu.complex.ComplexNDArray
 shapeinfoprovider = org.nd4j.linalg.cpu.nativecpu.DirectShapeInfoProvider
 constantsprovider = org.nd4j.linalg.cpu.nativecpu.cache.ConstantBuffersCache
 affinitymanager = org.nd4j.linalg.cpu.nativecpu.CpuAffinityManager
+memorymanager = org.nd4j.linalg.cpu.nativecpu.CpuMemoryManager
 dtype = float
 complex.double.class = org.nd4j.linalg.cpu.nativecpu.complex.ComplexDouble
 blas.ops = org.nd4j.linalg.cpu.nativecpu.BlasWrapper
