--- a/blas/CMakeLists.txt
+++ b/blas/CMakeLists.txt
@@ -77,30 +77,30 @@ if(CUDA_BLAS)
         if (CMAKE_BUILD_TYPE STREQUAL "Release")
             if(CUDA_VERSION VERSION_GREATER "7.5")
                 if ("${COMPUTE}" STREQUAL "all")
-                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DCUDA_8  -DVERBOSE; -lcublas; --cudart=static -O3 --maxrregcount 32 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_37,code=sm_37 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 -gencode arch=compute_53,code=sm_53 -gencode arch=compute_60,code=sm_60 -gencode arch=compute_61,code=sm_61 -gencode arch=compute_62,code=sm_62")
+                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DCUDA_8  -DVERBOSE; -lcublas; --cudart=static -O3 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_37,code=sm_37 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 -gencode arch=compute_53,code=sm_53 -gencode arch=compute_60,code=sm_60 -gencode arch=compute_61,code=sm_61 -gencode arch=compute_62,code=sm_62")
                 else()
-                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DCUDA_8 -DVERBOSE; -lcublas; --cudart=static -O3 --maxrregcount 32 -gencode arch=compute_${COMPUTE},code=sm_${COMPUTE}")
+                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DCUDA_8 -DVERBOSE; -lcublas; --cudart=static -O3 -gencode arch=compute_${COMPUTE},code=sm_${COMPUTE}")
                 endif()
             else()
                 if ("${COMPUTE}" STREQUAL "all")
-                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DVERBOSE; -lcublas; --cudart=static -O3 --maxrregcount 32 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_37,code=sm_37 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 -gencode arch=compute_53,code=sm_53")
+                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DVERBOSE; -lcublas; --cudart=static -O3 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_37,code=sm_37 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 -gencode arch=compute_53,code=sm_53")
                 else()
-                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DVERBOSE; -lcublas; --cudart=static -O3 --maxrregcount 32 -gencode arch=compute_${COMPUTE},code=sm_${COMPUTE}")
+                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DVERBOSE; -lcublas; --cudart=static -O3 -gencode arch=compute_${COMPUTE},code=sm_${COMPUTE}")
                 endif()
             endif()
 
         else()
             if(CUDA_VERSION VERSION_GREATER "7.5")
                 if ("${COMPUTE}" STREQUAL "all")
-                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DCUDA_8  -DVERBOSE; -G; -g; -lcublas; --cudart=static --maxrregcount 32 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_37,code=sm_37 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 -gencode arch=compute_53,code=sm_53 -gencode arch=compute_60,code=sm_60 -gencode arch=compute_61,code=sm_61  -gencode arch=compute_62,code=sm_62")
+                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DCUDA_8  -DVERBOSE; -G; -g; -lcublas; --cudart=static -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_37,code=sm_37 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 -gencode arch=compute_53,code=sm_53 -gencode arch=compute_60,code=sm_60 -gencode arch=compute_61,code=sm_61  -gencode arch=compute_62,code=sm_62")
                 else()
-                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DCUDA_8  -DVERBOSE; -G; -g; -lcublas; --cudart=static --maxrregcount 32 -gencode arch=compute_${COMPUTE},code=sm_${COMPUTE}")
+                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DCUDA_8  -DVERBOSE; -G; -g; -lcublas; --cudart=static -gencode arch=compute_${COMPUTE},code=sm_${COMPUTE}")
                 endif()
             else()
                 if ("${COMPUTE}" STREQUAL "all")
-                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DVERBOSE; -G; -g; -lcublas; --cudart=static --maxrregcount 32 -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_37,code=sm_37 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 -gencode arch=compute_53,code=sm_53")
+                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DVERBOSE; -G; -g; -lcublas; --cudart=static -gencode arch=compute_30,code=sm_30 -gencode arch=compute_35,code=sm_35 -gencode arch=compute_37,code=sm_37 -gencode arch=compute_50,code=sm_50 -gencode arch=compute_52,code=sm_52 -gencode arch=compute_53,code=sm_53")
                 else()
-                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DVERBOSE; -G; -g; -lcublas; --cudart=static --maxrregcount 32 -gencode arch=compute_${COMPUTE},code=sm_${COMPUTE}")
+                    list(APPEND CUDA_NVCC_FLAGS "--ptxas-options=-v; -DVERBOSE; -G; -g; -lcublas; --cudart=static -gencode arch=compute_${COMPUTE},code=sm_${COMPUTE}")
                 endif()
             endif()
         endif()
