--- a/deeplearning4j-nn/pom.xml
+++ b/deeplearning4j-nn/pom.xml
@@ -18,11 +18,24 @@
     </properties>
 
     <dependencies>
-        <!-- TODO: Do we want this here? -->
+        <!-- TODO: Do we want this here? Used only in Evaluation metadata...-->
         <dependency>
             <groupId>org.datavec</groupId>
             <artifactId>datavec-api</artifactId>
             <version>${datavec.version}</version>
+        </dependency>
+
+        <!-- ND4J APIs -->
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-api</artifactId>
+            <version>${nd4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.nd4j</groupId>
+            <artifactId>nd4j-native-api</artifactId>
+            <version>${nd4j.version}</version>
         </dependency>
 
         <!-- ND4J Shaded Jackson Dependency -->
@@ -38,16 +51,11 @@
             <version>1.8</version>
         </dependency>
 
+        <!-- Agrona. Used for Stats listener encoding/decoding via SBE -->
         <dependency>
-            <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-api</artifactId>
-            <version>${nd4j.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-native-api</artifactId>
-            <version>${nd4j.version}</version>
+            <groupId>org.agrona</groupId>
+            <artifactId>Agrona</artifactId>
+            <version>${agrona.version}</version>
         </dependency>
 
     </dependencies>
