- forced openmp on mac - llvm lib dir added to -L

--- a/blas/CMakeLists.txt
+++ b/blas/CMakeLists.txt
@@ -8,6 +8,7 @@ if(APPLE)
     link_directories(/usr/local/lib)
     link_directories(/usr/lib)
     link_directories(/lib)
+    link_directories(/usr/local/opt/llvm/lib)
 endif()
 if(WIN32)
     get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
@@ -24,7 +25,7 @@ if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
     set(CMAKE_C_COMPILER clang-omp++)
     set(CMAKE_CXX_COMPILER clang-omp++)
 
-    SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -march=${ARCH} -mtune=${ARCH}")
+    SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -march=${ARCH} -mtune=${ARCH} -fopenmp ")
 elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
     SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -O3 -fp-model fast -march=${ARCH} -mtune=${ARCH}")
 
