--- a/nd4j-parameter-server/src/test/resources/log4j.properties
+++ b/nd4j-parameter-server/src/test/resources/log4j.properties
@@ -15,7 +15,7 @@ log4j.appender.org.apache.uima=OFF
 log4j.appender.org.cleartk=OFF
 
 log4j.logger.org.springframework=INFO
-log4j.logger.org.nd4j=INFO
+log4j.logger.org.nd4j=DEBUG
 log4j.logger.org.canova=INFO
 log4j.logger.org.deeplearning4j=INFO
 log4j.logger.opennlp.uima.util=OFF
