--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
         <spark.version>1.5.2</spark.version>
         <agrona.version>0.5.4</agrona.version>
         <mapdb.version>3.0.2</mapdb.version>
+        <playframework.version>2.5.8</playframework.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
         <maven-scala-plugin.version>2.15.2</maven-scala-plugin.version>
     </properties>
