add background daemon tests and an extra parameter for specifying the… (#1324)
* add background daemon tests and an extra parameter for specifying the media driver directory

* change tests to use zt-exec

--- a/nd4j-parameter-server/pom.xml
+++ b/nd4j-parameter-server/pom.xml
@@ -63,5 +63,11 @@
             <artifactId>nd4j-aeron</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.zeroturnaround</groupId>
+            <artifactId>zt-exec</artifactId>
+            <version>1.9</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
