--- a/deeplearning4j-ui-parent/deeplearning4j-play/pom.xml
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/pom.xml
@@ -11,7 +11,6 @@
 
     <artifactId>deeplearning4j-play</artifactId>
 
-
     <dependencies>
         <dependency>
             <groupId>org.deeplearning4j</groupId>
@@ -34,7 +33,6 @@
 
 
         <!-- Test Scope Dependencies -->
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -42,12 +40,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!--<dependency>-->
-        <!--<groupId>ch.qos.logback</groupId>-->
-        <!--<artifactId>logback-classic</artifactId>-->
-        <!--<version>${logback.version}</version>-->
-        <!--<scope>test</scope>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>com.typesafe.play</groupId>
             <artifactId>play-logback_2.11</artifactId>
@@ -68,11 +60,99 @@
                     <configuration>
                         <source>1.8</source>
                         <target>1.8</target>
+                        <includes>
+                            <include>src/main/java/**/*</include>
+                        </includes>
                     </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
 
+        <plugins>
+
+            <!-- Build helper plugin: used to add the multiple independent source directories (Java, Scala, HTML templates) -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>${maven-build-helper-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>add-source</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>src/main/java</source>
+                                <source>src/main/scala</source>
+                                <source>src/main/views</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>com.google.code.play2-maven-plugin</groupId>
+                <artifactId>play2-maven-plugin</artifactId>
+                <version>${maven-play2-plugin.version}</version>
+
+                <!-- Generate Scala Page Templates
+                The Play framework template engine ("twirl") uses templates for HTML pages (or in principle any text-based
+                data: CSV, XML etc). These templates (*.scala.html files) need to be converted to Scala classes using
+                code generation. This is done during the Maven compile phase.
+                However, the Maven Play framework plugin does not allow proper customization of the output directory. Thus,
+                we generate these Scala classes in the default location (in the target/twirl/main/ directory) and use the
+                maven resources plugin to copy them to the actual location we want.
+                To generate the latest versions of these templates (after modifying or adding a new template), just run
+                 "mvn compile" in either the main project directory, or within the deeplearning4j ui module separately.
+                -->
+                <executions>
+                    <execution>
+                        <id>GenerateTemplates</id>
+                        <phase>compile</phase>
+                        <configuration>
+                        </configuration>
+                        <goals>
+                            <goal>template-compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>${maven-resources-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>CopyTemplates</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${basedir}/src/main/scala/org/deeplearning4j/ui/views</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${basedir}/target/twirl/main/org/deeplearning4j/ui/views/html</directory>
+                                    <filtering>true</filtering>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>com.google.code.sbt-compiler-maven-plugin</groupId>
+                <artifactId>sbt-compiler-maven-plugin</artifactId>
+                <version>${sbt-compiler-maven-plugin.version}</version>
+            </plugin>
+
+
+        </plugins>
     </build>
+
 
 </project>
