Switch to Play 2.4; make changes where necessary
Former-commit-id: 640cea772c96fff81cd30d24d65a599409d1c0b5 [formerly e038fbda48ce7a0e96fd76b2d3bdeb701d045271]
Former-commit-id: fddc372b76d6910e5e142772f148db33e400d258

--- a/deeplearning4j-ui-parent/deeplearning4j-play/pom.xml
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/pom.xml
@@ -40,10 +40,11 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- For Play 2.5: should use play-logback -->
         <dependency>
-            <groupId>com.typesafe.play</groupId>
-            <artifactId>play-logback_2.11</artifactId>
-            <version>${playframework.version}</version>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
             <scope>test</scope>
         </dependency>
 
