--- a/deeplearning4j-scaleout/spark/pom.xml
+++ b/deeplearning4j-scaleout/spark/pom.xml
@@ -31,6 +31,7 @@
     <modules>
         <module>dl4j-spark</module>
         <module>dl4j-spark-nlp</module>
+        <module>dl4j-spark-parameterserver</module>
     </modules>
 
     <properties>
@@ -54,7 +55,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <scalaVersion>2.10.6</scalaVersion>
+                    <scalaVersion>2.11.7</scalaVersion>
                 </configuration>
             </plugin>
 
@@ -77,17 +78,17 @@
 
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-mllib_2.10</artifactId>
+            <artifactId>spark-mllib_2.11</artifactId>
             <version>${spark.version}</version>
         </dependency>
         <dependency>
             <groupId>org.scala-lang</groupId>
             <artifactId>scala-library</artifactId>
-            <version>2.10.6</version>
+            <version>2.11.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.spark</groupId>
-            <artifactId>spark-core_2.10</artifactId>
+            <artifactId>spark-core_2.11</artifactId>
             <version>${spark.version}</version>
             <exclusions>
 
