--- a/deeplearning4j-ui-parent/deeplearning4j-play/pom.xml
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/pom.xml
@@ -32,6 +32,13 @@
         </dependency>
 
 
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>${reflections.version}</version>
+        </dependency>
+
+
         <!-- Test Scope Dependencies -->
         <dependency>
             <groupId>junit</groupId>
@@ -54,7 +61,6 @@
             <version>${nd4j.version}</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
 
 
