--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
         <agrona.version>0.5.4</agrona.version>
         <mapdb.version>3.0.2</mapdb.version>
         <playframework.version>2.4.6</playframework.version>    <!-- Play Framework 2.5 dropped Scala 2.10 support - use 2.4 for Spark compatibility w/ Scala 2.10 -->
+        <reflections.version>0.9.10</reflections.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
         <maven-scala-plugin.version>2.15.2</maven-scala-plugin.version>
         <maven-resources-plugin.version>3.0.1</maven-resources-plugin.version>
