More layout and routing implementation; blocking out of model page
Former-commit-id: c9c2fd95e4bba1116e2335052bb7e304d2be3554

--- a/deeplearning4j-ui-parent/deeplearning4j-play/src/main/typescript/org/deeplearning4j/ui/tsconfig.json
+++ b/deeplearning4j-ui-parent/deeplearning4j-play/src/main/typescript/org/deeplearning4j/ui/tsconfig.json
@@ -2,7 +2,8 @@
    "compilerOptions": {
       "outFile": "../../../../resources/deeplearning4jUiAssets/js/dl4j-play-ui.js",
       "removeComments": true,
-      "sourceMap": true
+      "sourceMap": true,
+      "declaration": true
    },
    "filesGlob": [
       "**/*.ts"
