WIP: model import code. Won't build without JavaCPP-generated interface for HDF5.

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,7 @@
         <module>deeplearning4j-cuda</module>
         <module>deeplearning4j-nlp-parent</module>
         <module>deeplearning4j-nn</module>
+        <module>deeplearning4j-modelimport</module>
     </modules>
 
     <licenses>
