--- a/deeplearning4j-nlp-parent/deeplearning4j-nlp-uima/pom.xml
+++ b/deeplearning4j-nlp-parent/deeplearning4j-nlp-uima/pom.xml
@@ -40,7 +40,7 @@
 
         <dependency>
             <groupId>org.nd4j</groupId>
-            <artifactId>nd4j-cuda-8.0</artifactId>
+            <artifactId>nd4j-native</artifactId>
             <version>${nd4j.version}</version>
             <scope>test</scope>
         </dependency>
