--- a/deeplearning4j-nlp-parent/deeplearning4j-nlp/pom.xml
+++ b/deeplearning4j-nlp-parent/deeplearning4j-nlp/pom.xml
@@ -72,6 +72,13 @@
       <artifactId>junit</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-core</artifactId>
+      <version>2.2.6</version>
+      <scope>test</scope>
+    </dependency>
+
     <!-- TSNE -->
 
 
