--- a/deeplearning4j-nlp-parent/deeplearning4j-nlp/pom.xml
+++ b/deeplearning4j-nlp-parent/deeplearning4j-nlp/pom.xml
@@ -80,27 +80,7 @@
     </dependency>
 
     <!-- TSNE -->
-
-
-    <dependency>
-      <groupId>io.dropwizard</groupId>
-      <artifactId>dropwizard-assets</artifactId>
-      <version>${dropwizard.version}</version>
-    </dependency>
-
-
-    <dependency>
-      <groupId>io.dropwizard</groupId>
-      <artifactId>dropwizard-views-mustache</artifactId>
-      <version>${dropwizard.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>io.dropwizard</groupId>
-      <artifactId>dropwizard-views-freemarker</artifactId>
-      <version>${dropwizard.version}</version>
-    </dependency>
-
+    <!-- (Previously: dropwizard deps) -->
 
 
     <dependency>
