--- a/deeplearning4j-ui-parent/deeplearning4j-ui/pom.xml
+++ b/deeplearning4j-ui-parent/deeplearning4j-ui/pom.xml
@@ -44,6 +44,14 @@
             <version>${project.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>2.0</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>com.google.guava</groupId>
