--- a/deeplearning4j-nlp-parent/pom.xml
+++ b/deeplearning4j-nlp-parent/pom.xml
@@ -15,5 +15,7 @@
     <modules>
         <module>deeplearning4j-nlp</module>
         <module>deeplearning4j-nlp-uima</module>
+        <module>deeplearning4j-nlp-korean</module>
+        <module>deeplearning4j-nlp-japanese</module>
     </modules>
 </project>
